# RM_Automation

./: .gitignore  buff
actual_rm_config/: .setup_assistant  CMakeLists.txt  package.xml
actual_rm_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  rm_the_good.ros2_control.xacro  rm_the_good.srdf  rm_the_good.urdf.xacro  ros2_controllers.yaml
actual_rm_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
actual_rm_configs/: .setup_assistant  CMakeLists.txt  package.xml
actual_rm_configs/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  rm.ros2_control.xacro  rm.srdf  rm.urdf.xacro  ros2_controllers.yaml
actual_rm_configs/launch/: cust_grp.launch.py  demo.launch.py  move_group.launch.py  rsp.launch.py  (+5 more)
actual_rm_description/: CMakeLists.txt  package.xml
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: ArmPosition.msg  ArmPwm.msg  GpsDetails.msg  GripperDest.msg  GuiCommand.msg  MarkerTag.msg  PlannerStatus.msg
rm_detection/: package.xml  setup.cfg  setup.py
rm_operate/: package.xml  setup.cfg  setup.py
rm_sensors/: package.xml  setup.cfg  setup.py
stick_rm/: CMakeLists.txt  joint_limits.yml  package.xml
stick_rm_config/: .setup_assistant  CMakeLists.txt  package.xml
stick_rm_description/: CMakeLists.txt  joint_limits.yml  package.xml
stick_rm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
(+103 files in other folders)
